# Polymorphic-collection

./: CMakeLists.txt  Dockerfile  README.md  main.c  requirements.txt  webservice.py
.github/workflows/: linux_test.yml
CLI/: cli.c  cli.h
LU-разложение/: lu_benchmark.c  lu_benchmark.h  lu_benchmark_plot.c  lu_decomposition.c  lu_decomposition.h
Matrix/: matrix.c  matrix.h
Menu/: menu.c  menu.h
Tests/: benchmark_tests.c  benchmark_tests.h  unit_tests.c  unit_tests.h
Web/: app.js  index.html
WebInterface/: matrix_interface.html  matrix_interface_complex.html  web_interface.c  web_interface.h
python/: api.py  config.py  main.py  matrix_lib.py  models.py  utils.py
server/: api.py  config.py  main.py  matrix_lib.py  models.py
src/: main.c
src/api/: api.c  api.h
src/logging/: logger.c  logger.h
src/matrix/: matrix.c  matrix.h
src/types_info/: complex_type.c  complex_type.h  complex_types.c  complex_types.h  double_type.c  double_type.h  double_types.c  field_info.h
src/web/: style.css
tests/: macros.h  unit_tests.c  unit_tests.h
web/: app.js  index.html  style.css
Логирование/: logger.c  logger.h
Матрицы/: matrix.c
Меню/: menu.c  menu.h
Тесты/: tests.c
Типы данных/: complex_types.c  complex_types.h  double_types.c  double_types.h
